--- a/mina_test/.classpath
+++ b/mina_test/.classpath
@@ -30,5 +30,30 @@
 	<classpathentry kind="lib" path="lib/ftplet-api-1.0.6.jar"/>
 	<classpathentry kind="lib" path="lib/ftpserver-core-1.0.6.jar" sourcepath="E:/work/task/20150914/software/ftpserver-1.0.6-src.zip"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/jopt-simple-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/kafka_2.10-0.8.2.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/kafka_2.10-0.8.2.2-scaladoc.jar"/>
+	<classpathentry kind="lib" path="lib/kafka_2.10-0.8.2.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/kafka_2.10-0.8.2.2-test.jar"/>
+	<classpathentry kind="lib" path="lib/kafka_2.10-0.8.2.2.jar" sourcepath="E:/work/task/20150914/software/kafka-0.8.2.2-src"/>
+	<classpathentry kind="lib" path="lib/kafka-clients-0.8.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/lz4-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/metrics-core-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/scala-library-2.10.4.jar"/>
+	<classpathentry kind="lib" path="lib/snappy-java-1.1.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/zkclient-0.3.jar"/>
+	<classpathentry kind="lib" path="lib/zookeeper-3.4.6.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.4.1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-nfs-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-daemon-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.4.1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-nfs-2.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
